# OpenTermo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVLOG.md  README.en.md  README.md  data.json  diet.html  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  refresh-icons.yml
OpenTermo-fixed/src/: App.tsx  index.css
OpenTermo-fixed/src-tauri/: tauri.conf.json
OpenTermo-fixed/src/lib/: themeUtils.ts
Taleb_Universe/: diet.html
Taleb_Universe/css/: cards.css  style.css  wild.css
Taleb_Universe/js/: global.js  wild.js
css/: main.css
js/: nav-manager.js
js/modules/: data-service.js  error-handler.js  event-handler.js  renderer.js
lang/en/LC_MESSAGES/: meatshell.po
lang/zh/LC_MESSAGES/: meatshell.po
meatshell/: CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
meatshell/packaging/aur/: PKGBUILD
meatshell/src/: command.rs  config.rs  lib.rs  main.rs  serial.rs  sftp.rs  ssh.rs  ssh_config.rs  telnet.rs
scripts/: fetch-icons.mjs
src/: App.tsx  app.rs  config.rs  index.css  main.rs  proxy.rs  sftp.rs  ssh.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  prompts.rs  session.rs
src/components/: AddCommandDialog.tsx  ClusterPanel.tsx  CommandPalette.tsx  CommandPanel.tsx  ConnectDialog.tsx  CredentialDialog.tsx  EditSessionDialog.tsx  FileTransferDialog.tsx  HostKeyDialog.tsx  LogDialog.tsx  SessionManager.tsx  SettingsPanel.tsx
src/components/layout/: FileExplorer.tsx  PortForwardPanel.tsx  ResizablePanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalView.tsx  TitleBar.tsx
src/components/ui/: button.tsx  dialog.tsx  (+2 more)
src/hooks/: useDragSort.ts
src/lib/: tauriCommands.ts  themeUtils.ts
src/stores/: commandStore.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
ui/: app.slint  session_dialog.slint  sftp_panel.slint  sidebar.slint  terminal_view.slint
